--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jpa.hibernate.ddl-auto = update
 
 spring.main.allow-bean-definition-overriding=true
 
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
+#spring.mvc.view.prefix=/WEB-INF/jsp/
+#spring.mvc.view.suffix=.jsp
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
